--- a/employee.html
+++ b/employee.html
@@ -6,6 +6,116 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Employee Web Page</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Check id input
+            $('#eid').on('keypress', function (event) {
+                var regex = new RegExp("^[0-9]+$");
+                var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
+                if (!regex.test(key) || $(this).val().length >= 8) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            // Check name input
+            $('#ename').on('keypress', function (event) {
+                var regex = new RegExp("^[a-zA-Z ]+$");
+                var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
+                if (!regex.test(key)) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            // Check email input
+            $('#eemail').on('keypress', function (event) {
+                var regex = new RegExp("^[a-zA-Z0-9._%+@\-]+$");
+                var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
+                if (!regex.test(key)) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            // Check SSN input, limit to numbers and 4 character length
+            $('#ssn').on('keypress', function (event) {
+                var regex = new RegExp("^[0-9]+$");
+                var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
+                if (!regex.test(key) || $(this).val().length >= 4) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+        });
+        
+        function validate(form) {
+            let id = form.eid.value;
+            let name = form.ename.value;
+            let email = form.eemail.value;
+            let department = form.department.value;
+            let gender = form.gender.value;
+            let ssn = form.ssn.value;
+
+            // Check if id is empty
+            if (id === "") {
+                alert("Id field cannot be empty.");
+                return false;
+            }
+
+            // Check if name is empty
+            if (name === "") {
+                alert("Name field cannot be empty.");
+                return false;
+            }
+
+            // Check if email is empty
+            if (email === "") {
+                alert("Email field cannot be empty.");
+                return false;
+            }
+
+            // Check if major is empty
+            if (department === "") {
+                alert("Department field cannot be empty.");
+                return false;
+            }
+
+            // Check if gender is empty
+            if (gender === "") {
+                alert("Gender field cannot be empty.");
+                return false;
+            }
+
+            // ID validation using regex
+            if (!/^\d+$/.test(id)) {
+                alert("ID submitted is not a number.");
+                return false;
+            }
+
+            // Name validation using regex
+            if (!/^[a-zA-Z ]+$/.test(name)){
+                alert("Name: " + name + " is invalid.");
+                return false;
+            }
+
+            // Email validation using regex
+            if (!/^[a-z0-9.]{1,64}@[a-z0-9.]{1,64}$/i.test(email)) {
+                alert("Email: " + email + " is invalid.")
+                return false;
+            }
+            
+            // SSN validation
+            if(ssn.length > 4 || !/^[0-9]+$/.test(ssn)){
+                alert("SSN is invalid.");
+                return false;
+            }
+
+            return true;
+        }
+    </script>
 </head>
 
 <body>
