--- a/employee.html
+++ b/employee.html
@@ -137,10 +137,10 @@
                     placeholder="Enter your full name..." required>
                 <br>
             </div>
-            <!-- Email uses an input element with type 'email' to indicate that input only allows for emails (predefined pattern in HTML5) -->
+            <!-- Email uses an input element with type 'text' to indicate that input only allows for emails (predefined pattern in HTML5) -->
             <div class="form-input-item">
                 <label for="email">Email</label>
-                <input type="email" id="email" class="form-user-input" placeholder="Enter your email..."
+                <input type="text" id="email" class="form-user-input" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$" placeholder="Enter your email..."
                     required>
                 <br>
             </div>
